# lob-model-trainer

./: .gitignore  CHANGELOG.md  CODEBASE.md  CONSUMER_FIX_PLAN_2026_05_04.md  CONTRIBUTING.md  EXPERIMENT_INDEX.md  MERGE_MIGRATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: README.md  README_configs.md  baseline_lstm.yaml  baseline_lstm_quick.yaml  deeplob_benchmark.yaml  deeplob_benchmark_h100.yaml  lstm_attn_bidir_h20.yaml
configs/archive/: README.md  baseline_lstm.yaml  deeplob_benchmark.yaml  nvda_bigmove_opportunity_v1.yaml  nvda_tlob_bigmove_v1.yaml  nvda_tlob_binary_signal_v1.yaml  xgboost_baseline.yaml
configs/bases/: README.md
configs/bases/datasets/: nvda_40feat_short_term.yaml  nvda_40feat_tlob_repo.yaml  nvda_98feat_triple_barrier.yaml  nvda_98feat_zscore_per_day.yaml  nvda_e4_5s.yaml  nvda_e5_30s.yaml  nvda_e5_60s.yaml  nvda_xnas_128feat_full.yaml  (+2 more)
configs/experiments/: e4_temporal_ridge_h60.yaml  e4_tlob_h60.yaml  e5_30s_huber_cvml.yaml  e5_30s_huber_nocvml.yaml  e5_60s_gmadl_cvml.yaml  e5_60s_huber_cvml.yaml  e5_60s_huber_nocvml.yaml  e6_calibrated_conviction.yaml  featureset_integration_148feat_ridge.yaml  nvda_bigmove_opportunity_v1.yaml  nvda_first_hmhp_r_v3p0.yaml  nvda_first_pytorch_v3p0.yaml  nvda_first_pytorch_v3p0_cvml.yaml  nvda_first_pytorch_v3p0_gmadl_cvml.yaml  nvda_first_temporal_gradboost_v3p0.yaml  nvda_h10_weighted_v1.yaml  nvda_hmhp_128feat_arcx_h10.yaml  nvda_hmhp_128feat_h10_primary.yaml  nvda_hmhp_128feat_opportunity_h10.yaml  nvda_hmhp_40feat_h10.yaml  nvda_hmhp_40feat_h60_profit8bps.yaml  nvda_hmhp_40feat_h60_profit8bps_regression.yaml  nvda_hmhp_multihorizon_v1.yaml  nvda_hmhp_regression_h10_primary.yaml  nvda_hmhp_regressor_h60.yaml  nvda_hmhp_triple_barrier_calibrated.yaml  nvda_hmhp_triple_barrier_v1.yaml  nvda_hmhp_triple_barrier_volscaled.yaml  nvda_logistic_baseline_h10.yaml  nvda_logistic_baseline_v1.yaml  nvda_logistic_signals_h10.yaml  nvda_logistic_signals_v1.yaml  nvda_short_term_hmhp_v1.yaml  nvda_temporal_gradboost_h10.yaml  nvda_temporal_ridge_h10.yaml  nvda_temporal_ridge_h10_v3p0.yaml  nvda_tlob_128feat_regression_finegrained_h10.yaml  nvda_tlob_128feat_regression_h10.yaml  nvda_tlob_128feat_regression_pointreturn_h10.yaml  nvda_tlob_98feat_h100.yaml  (+19 more)
docs/: ANALYSIS_MODULES_REFERENCE.md  DEEP_ANALYSIS_RESULTS.md  KEY_FINDINGS_LABEL_ANALYSIS.md  KEY_FINDINGS_PHASE_2A_COMPLETE.md  KEY_FINDINGS_SIGNAL_PREDICTIVE_POWER.md  PHASE_2A_EXPLORATORY_ANALYSIS.md  README.md  nvda_alignment_validation.json  nvda_complete_analysis.json  nvda_data_overview.json  nvda_full_analysis_output.txt  nvda_full_data_overview.json  nvda_full_label_analysis.json  nvda_generalization.json  nvda_label_analysis.json  nvda_streaming_days.json  nvda_streaming_labels.json  nvda_streaming_overview.json  nvda_streaming_signals.json  nvda_temporal_dynamics.json  signal_analysis_results.json  signal_distribution_stats.csv  signal_predictive_metrics.csv
docs/analysis_results/: nvda_complete_analysis.json
notebooks/: 00_data_overview.ipynb  01_label_analysis.ipynb  04_signal_predictive_power.ipynb
reports/: ABLATION_FINDINGS_2026_03_16.md  CONSOLIDATED_FINDINGS_2026_03.md  CONSOLIDATED_FINDINGS_2026_05.md  RESEARCH_IMPLEMENTATION_PLAN.md  TRAINING_PIPELINE_FORENSIC_AUDIT_2026_04_26.md  e4_phase2_baselines_2026_03.md  e4_training_backtest_2026_03.md  e5_phase2_training_2026_03.md  e8_model_execution_diagnostic_2026_03.md  hmhp_128feat_2026_03_13.md  kolm_of_experiment_2026_03_17.md  p0_label_execution_validation_2026_03_17.md  phase_a_regime_validation_2026_03.md  regression_series_2026_03_15.md  tlob_regression_2026_03_15.md
scripts/: _hft_ops_compat.py  check_experiment_index_completeness.py  compare_experiments_pairwise.py  compute_test_metrics_ci.py  e4_baselines.py  e5_baselines.py  evaluate_model.py  export_hmhp_signals.py  export_regression_signals.py  export_signals.py  export_tlob_regression_signals.py  precompute_norm_stats.py  run_baseline_evaluation.py  run_complete_streaming_analysis.py  run_data_overview.py  run_experiment_spec.py  run_full_analysis.py  run_generalization.py  run_label_analysis.py  run_signal_analysis.py  run_simple_model_ablation.py  run_simple_training.py  run_streaming_analysis.py  run_temporal_dynamics.py  train.py  validate_alignment_bugs.py  validate_export.py
scripts/analysis/: analyze_feature_importance.py  analyze_hmhp_confidence.py  analyze_move_magnitudes.py  analyze_predictions.py  analyze_spread_conditioned.py  diagnose_feature_correlations.py  evaluate_model.py  relabel_profit_threshold.py  run_baseline_evaluation.py  train_xgboost_baseline.py  validate_training_setup.py
scripts/archive/: README.md  e4_baselines.py  e5_baselines.py  run_experiment_spec.py  run_simple_model_ablation.py  run_simple_training.py
src/lobtrainer/: __init__.py  cli.py  ledger_hook.py
tests/: __init__.py  conftest.py  test_alignment.py  test_base_axis_ownership.py  test_base_trainer_protocol.py  test_baselines.py  test_bit_exact_replay.py  test_bootstrap_ci_orchestration.py  test_calibration.py  test_callback_state_dict.py  test_compatibility_ssot_helpers.py  test_config.py  test_config_inheritance.py  test_config_paths_helper.py  test_create_dataloaders.py  test_create_trainer_dispatch.py  test_cv_trainer_sklearn_guard.py  test_data_config_feature_set_fields.py  test_data_overview.py  test_dataset_strict_validation.py  test_deeplob_integration.py  test_empirical_trust_phase_a.py  test_evaluation.py  test_experiment_spec_and_gates.py  test_experiments.py  test_feature_index.py  test_feature_preset_migration.py  test_feature_presets.py  test_feature_selector.py  test_feature_set_resolver.py  test_feature_set_resolver_parity.py  test_forward_prices_integration.py  test_generalization.py  test_hmhp_collate.py  test_hmhp_primary_horizon_idx_bridge.py  test_horizons_resolver.py  test_integration.py  test_integration_wrappers.py  test_intraday_seasonality.py  test_label_analysis.py  (+54 more)
tests/test_security/: test_no_silent_import_error_fallback_py339.py  test_np_load_allow_pickle_false.py
(+143 files in other folders)
