[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lobtrainer"
version = "0.4.0"
description = "LOB Model Trainer: ML experimentation for limit order book price prediction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Knight" }
]
keywords = ["hft", "lob", "limit-order-book", "machine-learning", "trading"]

dependencies = [
    # Pipeline contracts (single source of truth for feature indices)
    # Phase A.5.3a.1 (2026-04-24): pin bump from bare to `>=2.3.0` required
    # by A.5.3a LabelsConfig migration — compute_label_strategy_hash's
    # Pydantic BaseModel dispatch branch first shipped in hft-contracts
    # 2.3.0 (Phase A.5.1). Without this pin, trainer CI against a stale
    # hft-contracts editable install could silently use the pre-migration
    # dataclass-only path and silently rotate fingerprints.
    "hft-contracts>=2.3.0",

    # Shared metrics library (IC, R², regression metrics with NaN safety)
    "hft-metrics",

    # Model architectures (local: pip install -e ../lob-models)
    "lob-models",
    
    # Core ML
    "torch>=2.0",
    "numpy>=1.24",  # Compatible with installed version
    
    # Data handling
    "pandas>=2.0",
    
    # Classical ML
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    
    # Statistical analysis
    "scipy>=1.10",  # Stats tests, correlations
    "statsmodels>=0.14",  # ADF stationarity test
    
    # Experiment tracking
    "mlflow>=2.8",
    
    # Configuration
    "pyyaml>=6.0",
    # Phase A.5.3i (2026-04-24 KEYSTONE): dacite retired. All 9 config
    # classes (LabelsConfig through ExperimentConfig) are now Pydantic v2
    # SafeBaseModel subclasses; ``ExperimentConfig.from_dict`` delegates
    # to ``cls.model_validate(data)`` which handles nested BaseModel
    # construction natively. Upper bound <3.0 protects against Pydantic
    # v3 breaking changes.
    "pydantic>=2.7,<3.0",
    
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    
    # Utilities
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
shap = [
    "shap>=0.42",  # Feature importance
]
wandb = [
    "wandb>=0.16",  # W&B experiment tracking
]

[project.scripts]
lobtrainer = "lobtrainer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lobtrainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

